--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,62 @@
-html,
-body {
-  padding: 0;
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap");
+
+*,
+*::after,
+*::before {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Raleway", sans-serif;
+}
+
+.dark {
+  --bg1: rgb(25, 25, 25);
+  --bg2: rgb(27, 27, 27);
+  --fc1: rgb(255, 255, 255);
+  --fc2: rgb(222, 222, 222);
+  --primary: rgb(255, 106, 0);
+  --border: rgba(255, 255, 255, 0.045);
+  --transition: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+body {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+  display: flex;
+}
+html {
+  height: -webkit-fill-available;
+}
+
+#__next {
+  flex: 1 1;
 }
 
 a {
-  color: inherit;
   text-decoration: none;
+  color: var(--fc1);
 }
 
-* {
-  box-sizing: border-box;
+.main-header {
+  margin: 0.5em 0;
+  font-size: max(3rem, 6vw);
+  font-weight: bolder;
+  color: var(--fc1);
+}
+
+.sub-header {
+  font-size: max(1.6rem, 1.3vw);
+  font-weight: normal;
+  color: var(--fc1);
+}
+
+p,
+li,
+a {
+  font-size: max(0.8rem, 0.9vw);
+  color: var(--fc1);
+}
+
+::-webkit-scrollbar {
+  width: 0;
 }
