--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -19,12 +19,15 @@
   width: 100%;
   height: 100%;
   z-index: 1;
-
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   flex-direction: column;
+}
+
+.greeting h1 {
+  line-height: 0.5;
 }
 
 .container__model {
